--- a/assignment2/PyTorch.ipynb
+++ b/assignment2/PyTorch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "pdf-ignore"
@@ -120,7 +120,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "using device: cpu\n"
+      "using device: cuda\n"
      ]
     }
    ],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "pdf-ignore-input"
@@ -310,15 +310,10 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'torch' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/saadalam/Desktop/assignment2_colab/assignment2/PyTorch.ipynb Cell 13\u001b[0m line \u001b[0;36m4\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bsaad-global-m4/home/saadalam/Desktop/assignment2_colab/assignment2/PyTorch.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=44'>45</a>\u001b[0m     scores \u001b[39m=\u001b[39m two_layer_fc(x, [w1, w2])\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bsaad-global-m4/home/saadalam/Desktop/assignment2_colab/assignment2/PyTorch.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=45'>46</a>\u001b[0m     \u001b[39mprint\u001b[39m(scores\u001b[39m.\u001b[39msize())  \u001b[39m# you should see [64, 10]\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Bsaad-global-m4/home/saadalam/Desktop/assignment2_colab/assignment2/PyTorch.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=47'>48</a>\u001b[0m two_layer_fc_test()\n",
-      "\u001b[1;32m/home/saadalam/Desktop/assignment2_colab/assignment2/PyTorch.ipynb Cell 13\u001b[0m line \u001b[0;36m4\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bsaad-global-m4/home/saadalam/Desktop/assignment2_colab/assignment2/PyTorch.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=39'>40</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtwo_layer_fc_test\u001b[39m():\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bsaad-global-m4/home/saadalam/Desktop/assignment2_colab/assignment2/PyTorch.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=40'>41</a>\u001b[0m     hidden_layer_size \u001b[39m=\u001b[39m \u001b[39m42\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Bsaad-global-m4/home/saadalam/Desktop/assignment2_colab/assignment2/PyTorch.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=41'>42</a>\u001b[0m     x \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mzeros((\u001b[39m64\u001b[39m, \u001b[39m50\u001b[39m), dtype\u001b[39m=\u001b[39mdtype)  \u001b[39m# minibatch size 64, feature dimension 50\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bsaad-global-m4/home/saadalam/Desktop/assignment2_colab/assignment2/PyTorch.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=42'>43</a>\u001b[0m     w1 \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mzeros((\u001b[39m50\u001b[39m, hidden_layer_size), dtype\u001b[39m=\u001b[39mdtype)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bsaad-global-m4/home/saadalam/Desktop/assignment2_colab/assignment2/PyTorch.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=43'>44</a>\u001b[0m     w2 \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mzeros((hidden_layer_size, \u001b[39m10\u001b[39m), dtype\u001b[39m=\u001b[39mdtype)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([64, 10])\n"
      ]
     }
    ],
@@ -461,15 +456,10 @@
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'size'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_98393/658522081.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mscores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mthree_layer_convnet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mconv_w1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconv_b1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconv_w2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconv_b2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfc_w\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfc_b\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# you should see [64, 10]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mthree_layer_convnet_test\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/tmp/ipykernel_98393/658522081.py\u001b[0m in \u001b[0;36mthree_layer_convnet_test\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mscores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mthree_layer_convnet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mconv_w1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconv_b1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconv_w2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconv_b2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfc_w\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfc_b\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# you should see [64, 10]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0mthree_layer_convnet_test\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'size'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([64, 10])\n"
      ]
     }
    ],
@@ -508,13 +498,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "tags": [
      "pdf-ignore-input"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 1.1788,  1.2221,  0.7643, -0.5682, -2.2075],\n",
+       "        [-0.1190, -0.0043, -0.3979, -2.1244, -0.7716],\n",
+       "        [-1.3784, -0.2421, -0.9219,  1.2094,  2.1447]], device='cuda:0',\n",
+       "       requires_grad=True)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def random_weight(shape):\n",
     "    \"\"\"\n",
@@ -552,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "tags": [
      "pdf-ignore-input"
@@ -728,8 +732,14 @@
     "# TODO: Initialize the parameters of a three-layer ConvNet.                    #\n",
     "################################################################################\n",
     "# *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "conv_w1 = random_weight((channel_1, 3, 5, 5))\n",
+    "conv_b1 = zero_weight(channel_1)\n",
+    "conv_w2 = random_weight((channel_2, channel_1, 3, 3))\n",
+    "conv_b2 = zero_weight(channel_2)\n",
+    "fc_w = random_weight((channel_2 * 32 * 32, 10))\n",
+    "fc_b = zero_weight(10)\n",
     "\n",
-    "pass\n",
+    "# pass\n",
     "\n",
     "# *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "################################################################################\n",
